feat: add route view details advertisement
