# src/external/swagger/swagger_output.json
@@ -289,6 +289,24 @@
           }
         }
       }
+    },
+    "/advertisement/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
     }
   }
 }
